--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Violet</title>
+    
     <!-- bootstrap cdn -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <!-- Font Awesome Kit -->
+    <script src="https://kit.fontawesome.com/3796080522.js" crossorigin="anonymous"></script>
 
   </head>
   <body>
